week6 cs50-shorts uploads

--- a/week4_libraries/sandbox.ipynb
+++ b/week4_libraries/sandbox.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-20T13:47:03.384683Z",
-     "start_time": "2026-02-20T13:46:57.015800Z"
+     "end_time": "2026-02-24T17:52:37.102320Z",
+     "start_time": "2026-02-24T17:52:32.508409Z"
     }
    },
    "source": [
@@ -35,27 +35,27 @@
       "Toss 4: Heads\n",
       "Card: 7\n",
       "Card: Jack\n",
-      "Card: 9\n",
-      "Card: 2\n",
-      "Card: 6\n",
+      "Card: 8\n",
       "Card: 10\n",
       "Card: Ace\n",
       "Card: Queen\n",
-      "Card: 8\n",
-      "Card: 4\n",
-      "Card: King\n",
       "Card: 5\n",
-      "Card: 3\n"
+      "Card: 3\n",
+      "Card: 4\n",
+      "Card: 2\n",
+      "Card: King\n",
+      "Card: 6\n",
+      "Card: 9\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-20T14:50:52.725160Z",
-     "start_time": "2026-02-20T14:50:43.815514Z"
+     "end_time": "2026-02-24T17:53:05.776981Z",
+     "start_time": "2026-02-24T17:52:52.975732Z"
     }
    },
    "cell_type": "code",
@@ -65,7 +65,9 @@
     "\n",
     "song_name = input(\"What is the song name? \")\n",
     "\n",
-    "response = requests.get(\"https://itunes.apple.com/search?entity=song&limit=1&term=\"+ song_name).json()\n",
+    "response = requests.get(\n",
+    "    \"https://itunes.apple.com/search?entity=song&limit=1&term=\" + song_name\n",
+    ").json()\n",
     "\n",
     "print(json.dumps(response, indent=2))"
    ],
@@ -81,31 +83,29 @@
       "    {\n",
       "      \"wrapperType\": \"track\",\n",
       "      \"kind\": \"song\",\n",
-      "      \"artistId\": 1462541757,\n",
-      "      \"collectionId\": 1691699589,\n",
-      "      \"trackId\": 1691699836,\n",
-      "      \"artistName\": \"Teddy Swims\",\n",
-      "      \"collectionName\": \"I've Tried Everything But Therapy (Part 1)\",\n",
-      "      \"trackName\": \"Lose Control\",\n",
-      "      \"collectionCensoredName\": \"I've Tried Everything But Therapy (Part 1)\",\n",
-      "      \"trackCensoredName\": \"Lose Control\",\n",
-      "      \"artistViewUrl\": \"https://music.apple.com/us/artist/teddy-swims/1462541757?uo=4\",\n",
-      "      \"collectionViewUrl\": \"https://music.apple.com/us/album/lose-control/1691699589?i=1691699836&uo=4\",\n",
-      "      \"trackViewUrl\": \"https://music.apple.com/us/album/lose-control/1691699589?i=1691699836&uo=4\",\n",
-      "      \"previewUrl\": \"https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview221/v4/9f/65/d6/9f65d67d-db40-d7da-c954-9a23d28dfe1a/mzaf_7625794503195542708.plus.aac.p.m4a\",\n",
-      "      \"artworkUrl30\": \"https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/36/19/66/36196640-1561-dc5e-c6bc-1e5f4befa583/093624856771.jpg/30x30bb.jpg\",\n",
-      "      \"artworkUrl60\": \"https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/36/19/66/36196640-1561-dc5e-c6bc-1e5f4befa583/093624856771.jpg/60x60bb.jpg\",\n",
-      "      \"artworkUrl100\": \"https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/36/19/66/36196640-1561-dc5e-c6bc-1e5f4befa583/093624856771.jpg/100x100bb.jpg\",\n",
-      "      \"collectionPrice\": 9.99,\n",
-      "      \"trackPrice\": 1.29,\n",
-      "      \"releaseDate\": \"2023-06-23T12:00:00Z\",\n",
-      "      \"collectionExplicitness\": \"explicit\",\n",
+      "      \"artistId\": 1548567612,\n",
+      "      \"collectionId\": 1795667814,\n",
+      "      \"trackId\": 1795667819,\n",
+      "      \"artistName\": \"AFUSIC & AliSoomroMusic\",\n",
+      "      \"collectionName\": \"Pal Pal - Single\",\n",
+      "      \"trackName\": \"Pal Pal\",\n",
+      "      \"collectionCensoredName\": \"Pal Pal - Single\",\n",
+      "      \"trackCensoredName\": \"Pal Pal\",\n",
+      "      \"artistViewUrl\": \"https://music.apple.com/us/artist/afusic/1548567612?uo=4\",\n",
+      "      \"collectionViewUrl\": \"https://music.apple.com/us/album/pal-pal/1795667814?i=1795667819&uo=4\",\n",
+      "      \"trackViewUrl\": \"https://music.apple.com/us/album/pal-pal/1795667814?i=1795667819&uo=4\",\n",
+      "      \"previewUrl\": \"https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview221/v4/fe/3b/66/fe3b660b-5bca-34e0-14b7-c0a433f3673d/mzaf_2299281302761399301.plus.aac.p.m4a\",\n",
+      "      \"artworkUrl30\": \"https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/c8/cc/e8/c8cce868-9342-d78c-fec5-9d9e5b44106a/25UMGIM17787.rgb.jpg/30x30bb.jpg\",\n",
+      "      \"artworkUrl60\": \"https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/c8/cc/e8/c8cce868-9342-d78c-fec5-9d9e5b44106a/25UMGIM17787.rgb.jpg/60x60bb.jpg\",\n",
+      "      \"artworkUrl100\": \"https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/c8/cc/e8/c8cce868-9342-d78c-fec5-9d9e5b44106a/25UMGIM17787.rgb.jpg/100x100bb.jpg\",\n",
+      "      \"releaseDate\": \"2025-02-18T12:00:00Z\",\n",
+      "      \"collectionExplicitness\": \"notExplicit\",\n",
       "      \"trackExplicitness\": \"notExplicit\",\n",
       "      \"discCount\": 1,\n",
       "      \"discNumber\": 1,\n",
-      "      \"trackCount\": 10,\n",
-      "      \"trackNumber\": 2,\n",
-      "      \"trackTimeMillis\": 210689,\n",
+      "      \"trackCount\": 1,\n",
+      "      \"trackNumber\": 1,\n",
+      "      \"trackTimeMillis\": 147000,\n",
       "      \"country\": \"USA\",\n",
       "      \"currency\": \"USD\",\n",
       "      \"primaryGenreName\": \"Pop\",\n",
@@ -116,26 +116,26 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-21T06:56:48.077181Z",
-     "start_time": "2026-02-21T06:56:36.512453Z"
+     "end_time": "2026-02-24T17:53:34.075602Z",
+     "start_time": "2026-02-24T17:53:28.240165Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import requests\n",
     "\n",
+    "\n",
     "def main():\n",
     "    artist = input(\"Which artist would you like to search for? \")\n",
     "\n",
     "    try:\n",
     "        content = requests.get(\n",
-    "            \"https://api.artic.edu/api/v1/artworks/search\",\n",
-    "            {\"q\": artist}\n",
+    "            \"https://api.artic.edu/api/v1/artworks/search\", {\"q\": artist}\n",
     "        )\n",
     "        content.raise_for_status()\n",
     "    except requests.HTTPError:\n",
@@ -145,28 +145,12 @@
     "    for artwork in content.json()[\"data\"]:\n",
     "        print(f\"* {artwork[\"title\"]}\")\n",
     "\n",
+    "\n",
     "main()"
    ],
    "id": "3e2a44c20039b37a",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* The Old Guitarist\n",
-      "* Daniel-Henry Kahnweiler\n",
-      "* The Red Armchair\n",
-      "* Mother and Child\n",
-      "* Man with a Pipe\n",
-      "* Portrait of Pablo Picasso\n",
-      "* Head of a Woman (Fernande)\n",
-      "* Nude under a Pine Tree\n",
-      "* Weeping Woman I\n",
-      "* Portrait of Picasso\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 5
   }
  ],
  "metadata": {
